# Pixel-Heart-OS-

./: .dockerignore  .editorconfig  .env.example  .gitignore  ARCHITECTURE_REDESIGN.md  CLAUDE.md  COMPREHENSIVE_FIXES.md  DEVELOPMENT_SUMMARY.md  DOCKER_DEPLOY.md  EXECUTION_SUMMARY.md  FIX_REPORT.md  Makefile  PROJECT_STATUS.md  PROJECT_SUMMARY.md  Pixel Heart OS_ AI-Readable Requirements Document v2.0.md  QUICKSTART.md  README.md  START_HERE.md  TODO_PHASE4.md  TROUBLESHOOTING.md  docker-compose.yml  index.html
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: pixel-heart-os-setup.md  pixel-heart-os.md
.sisyphus/notepads/pixel-heart-os-setup/: decisions.md  learnings.md
.sisyphus/plans/: pixel-heart-os-phase2.md  pixel-heart-os-phase3.md  pixel-heart-os-setup.md
backend/: .env.example  Dockerfile  config.py  main.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt
backend/api/: schemas.py
backend/api/v1/: __init__.py  beads.py  heroine.py  npcs.py  scenes.py  simulation.py
backend/beads/: __init__.py  engine.py
backend/core/: __init__.py  cache.py  container.py  errors.py  lifecycle.py
backend/data/: .gitkeep
backend/data/heroine/: .gitkeep  identity.md  soul.md  voice.json
backend/data/npcs/: .gitkeep
backend/data/scenes/: .gitkeep
backend/database/: __init__.py  engine.py  init.py  models.py
backend/graphs/: __init__.py  simulation_graph.py
backend/infrastructure/database/repositories/: __init__.py  bead_repo.py  character_repo.py  relationship_repo.py
backend/interfaces/api/: __init__.py  deps.py
backend/llm/: service.py
backend/prompts/: dialogue_generation.txt  generate_npc.txt  heroine_parsing.txt  npc_generation.txt  parse_heroine.txt  scene_generation.txt
backend/scripts/: generate_sample_data.py
backend/services/: __init__.py  bead_service.py  heroine_service.py  npc_service.py  scene_service.py  simulation_service.py  storage_service.py
backend/storage/: file_system.py
backend/tests/: test_example.py
backend/vector_store/: chroma_client.py
data/heroine/: identity.md.example  soul.md.example  voice.toml.example
frontend/: .eslintrc.cjs  .prettierrc  Dockerfile  Dockerfile.frontend  nginx.conf  package.json  svelte.config.js  svelte.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts  tsconfig.json
frontend/.svelte-kit/output/server/: manifest-full.js
frontend/.svelte-kit/types/: route_meta_data.json
frontend/src/: app.css  app.html
frontend/src/lib/: PhaserGame.svelte  event-bus.ts
frontend/src/lib/__tests__/: event-bus.test.ts
frontend/src/phaser/: main.ts
frontend/src/routes/: +layout.js  +layout.server.ts  +layout.svelte  +page.svelte
scripts/: install-deps.sh  setup.sh
shared/types/: README.md  pydantic_to_ts.py
(+79 files in other folders)
