[project]
name = "pixel-heart-backend"
version = "0.1.0"
description = "Pixel Heart OS Backend - FastAPI + LangGraph + Beads System"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "chromadb>=0.5.0",
    "langgraph>=0.0.40",
    "langchain>=0.1.0",
    "langchain-core>=0.1.30",
    "anthropic>=0.20.0",
    "toml>=0.10.2",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "cryptography>=41.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "black>=24.1.0",
    "pre-commit>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.22.0",
    "ipdb>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.per-file-ignores]
"tests/*" = ["PL", "S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov --cov-report=term --cov-report=html"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
